only allow a space to be claimed once, display current turn and winner if game ends in a win

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -4,18 +4,18 @@
     <title>Movie Tickets</title>
     <link rel="stylesheet" href="css/normalize.css" media="screen">
     <link rel="stylesheet" href="css/skeleton.css" media="screen">
-    <link rel="stylesheet" href="css/styles.css" media="screen">
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/jquery-scripts.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Bitter:700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/styles.css" media="screen">
     </head>
   <body>
     <div class="container">
 
     <div id="header">
       <div id="playerX"></div>
-      <div id="win_sign"></div>
+      <div id="game_status">In-Progress</div>
       <div id="playerO"></div>
     </div>
 
