refactored code for turnCounter and displaying the current turn graphically

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -14,9 +14,9 @@
     <div class="container">
 
     <div id="header">
-      <div id="playerX"></div>
-      <div id="game_status">In-Progress</div>
-      <div id="playerO"></div>
+      <div id="playerX" class="header"></div>
+      <div id="game_status" class="header">In-Progress</div>
+      <div id="playerO" class="header"></div>
     </div>
 
       <div id="gameBoard">
