--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Movie Tickets</title>
-    <link rel="stylesheet" href="css/normalize.css" media="screen">
-    <link rel="stylesheet" href="css/skeleton.css" media="screen">
+    <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/jquery-scripts.js"></script>
@@ -11,35 +10,42 @@
     <link rel="stylesheet" href="css/styles.css" media="screen">
     </head>
   <body>
+
+    <center>
+      <div class="btn">
+        <button type="button" class="btn btn-info" id="friend">Play a Friend</button>
+        <button type="button" class="btn btn-info" id="computer">Play the Computer</button>
+      </div>
+    </center>
+
     <div class="container">
-
-    <div id="header">
-      <div id="playerX" class="header"></div>
-      <div id="game_status" class="header">In-Progress</div>
-      <div id="playerO" class="header"></div>
-    </div>
-
-      <div id="gameBoard">
-        <div class="row" id="row-0">
-          <div class="space" id="0"></div>
-          <div class="space" id="1"></div>
-          <div class="space" id="2"></div>
-        </div>
-        <div class="row" id="row-1">
-          <div class="space" id="3"></div>
-          <div class="space" id="4"></div>
-          <div class="space" id="5"></div>
-        </div>
-        <div class="row" id="row-2">
-          <div class="space" id="6"></div>
-          <div class="space" id="7"></div>
-          <div class="space" id="8"></div>
-        </div>
+      <div id="header">
+        <div id="playerX" class="header"></div>
+        <div id="game_status" class="header">In-Progress</div>
+        <div id="playerO" class="header"></div>
       </div>
 
-    <div id="info_bar">
+        <div id="gameBoard">
+          <div class="row" id="row-0">
+            <div class="space" id="0"></div>
+            <div class="space" id="1"></div>
+            <div class="space" id="2"></div>
+          </div>
+          <div class="row" id="row-1">
+            <div class="space" id="3"></div>
+            <div class="space" id="4"></div>
+            <div class="space" id="5"></div>
+          </div>
+          <div class="row" id="row-2">
+            <div class="space" id="6"></div>
+            <div class="space" id="7"></div>
+            <div class="space" id="8"></div>
+          </div>
+        </div>
 
-    </div>
+      <div id="info_bar">
+
+      </div>
     </div>
   </body>
 </html>
