--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -13,15 +13,15 @@
 
     <center>
       <div class="btn">
-        <button type="button" class="btn btn-info" id="friend">Play a Friend</button>
-        <button type="button" class="btn btn-info" id="computer">Play the Computer</button>
+        <button type="button" class="btn btn-warning btn-lg" id="friend">Play a Friend</button>
+        <button type="button" class="btn btn-warning btn-lg" id="computer">Play a Ghost</button>
       </div>
     </center>
 
     <div class="container">
       <div id="header">
         <div id="playerX" class="header"></div>
-        <div id="game_status" class="header">In-Progress</div>
+        <div id="game_status" class="header">Trick Tac Toe-or-Treat</div>
         <div id="playerO" class="header"></div>
       </div>
 
@@ -43,9 +43,7 @@
           </div>
         </div>
 
-      <div id="info_bar">
 
-      </div>
     </div>
   </body>
 </html>
